--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,46 @@
-affine==2.4.0
 annotated-types==0.7.0
-asgiref==3.7.2
-attrs==25.3.0
-boto3==1.28.14
-botocore==1.31.14
+asgiref==3.9.1
 Brotli==1.1.0
-cachetools==5.5.0
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.2.1
-click-plugins==1.1.1.2
-cligj==0.7.2
+cachetools==5.5.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.1.8
 colorama==0.4.6
-distlib==0.3.6
 dj-database-url==3.0.1
-Django==4.2.3
-django-clearcache==1.2.1
-django-crispy-forms==1.14.0
-django-environ==0.10.0
-django-ses==3.5.0
-django-storages==1.13.2
-djangorestframework==3.15.2
-filelock==3.8.0
-google-ai-generativelanguage==0.6.10
-google-api-core==2.21.0
-google-api-python-client==2.149.0
-google-auth==2.35.0
+Django==4.2.23
+dotenv==0.9.9
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.1
+google-api-python-client==2.179.0
+google-auth==2.40.3
 google-auth-httplib2==0.2.0
-google-generativeai==0.8.3
-googleapis-common-protos==1.65.0
-grpcio==1.67.0
-grpcio-status==1.67.0
-gunicorn==21.2.0
-httplib2==0.22.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
+grpcio==1.74.0
+grpcio-status==1.71.2
+gunicorn==23.0.0
+h11==0.16.0
+httplib2==0.30.0
 idna==3.10
-jmespath==1.0.1
-numpy==2.3.1
-packaging==23.1
-pandas==2.3.0
-Pillow==11.3.0
-platformdirs==2.5.3
-proto-plus==1.24.0
-protobuf==5.28.2
-psycopg2-binary==2.9.6
+packaging==25.0
+pillow==11.3.0
+proto-plus==1.26.1
+protobuf==5.29.5
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pydantic==2.9.2
-pydantic_core==2.23.4
-pyparsing==3.2.0
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-pytz==2023.3
-rasterio==1.4.3
-requests==2.32.3
-rsa==4.9
-s3transfer==0.6.1
-six==1.16.0
-sqlparse==0.4.4
-tqdm==4.66.5
-typing_extensions==4.12.2
-tzdata==2023.3
-uritemplate==4.1.1
-urllib3==1.26.16
-virtualenv==20.16.6
+pyasn1_modules==0.4.2
+pydantic==2.11.7
+pydantic_core==2.33.2
+pyparsing==3.2.3
+python-dotenv==1.1.1
+requests==2.32.5
+rsa==4.9.1
+sqlparse==0.5.3
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+tzdata==2025.2
+uritemplate==4.2.0
+urllib3==2.5.0
+uvicorn==0.35.0
 whitenoise==6.9.0
